Complete echo bot

--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   "bugs": {
     "url": "https://github.com/zhudhjen/BangumiHelperBot/issues"
   },
-  "homepage": "https://github.com/zhudhjen/BangumiHelperBot#readme"
+  "homepage": "https://github.com/zhudhjen/BangumiHelperBot#readme",
+  "dependencies": {
+    "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2"
+  }
 }
